--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,92 @@
-*.pyc
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+__pycache__
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+#security file
+mongo_conf.py
+
+##Java jgnore setting
+#Directories
+/build/
+/bin/
+target/
+
+#OS file
+.DS_Store
+
+*.class
+
+#package files
+*.jar
+*.war
+*.ear
+*.db
+
+
+##############
+#Windows
+#############
+
+#Widows image file cache
+Thumb.db
+
+#Folder config file
+Desktop.ini
+
+######################
+# Eclipse
+######################
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+#External tool builder 
+.externalToollBuilders/
+
+#locally stored "Eclipsr Launch configuration"
+*.launch
+
+#PDT-specific
+.buildpath
